2011-05-08  Andy Buckley  <andy@insectnation.org>

	* Extending flat2aida to be able to read from and write to
	stdin/out as for aida2flat, and also eliminating the internal
	histo parsing representation in favour of the one in
	lighthisto. lighthisto's fromFlat also needed a bit of an
	overhaul: it has been extended to parse each histo's chunk of
	text (including BEGIN and END lines) in fromFlatHisto, and for
	fromFlat to parse a collection of histos from a file, in keeping
	with the behaviour of fromDPS/fromAIDA. Merging into Professor is
	now needed.

	* Extending aida2flat to have a better usage message, to accept
	input from stdin for command chaining via pipes, and to be a bit
	more sensibly internally structured (although it also now has to
	hold all histos in memory before writing out -- that shouldn't be
	a problem for anything other than truly huge histo files).

2011-05-04  Andy Buckley  <andy@insectnation.org>

	* compare-histos: If using --mc-errs style, prefer dotted and
	dashdotted line styles to dashed, since dashes are often too long
	to be distinguishable from solid lines. Even better might be to
	always use a solid line for MC errs style, and to add more colours.

	* rivet-mkhtml: use a no-mc-errors drawing style by default,
	to match the behaviour of compare-histos, which it calls. The
	--no-mc-errs option has been replaced with an --mc-errs option.

2011-05-04  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Ignore duplicate files in compare-histos.

2011-04-25  Andy Buckley  <andy@insectnation.org>

	* Adding some hadron-specific N and sumET vs. |eta| plots to MC_GENERIC.

	* Re-adding an explicit attempt to get the beam particles, since
	HepMC's IO_HERWIG seems to not always set them even though it's
	meant to.

2011-04-19  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Added ATLAS_2011_S9002537 W asymmetry analysis

2011-04-14  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* deltaR, deltaPhi, deltaEta now available in all combinations of